@@ -122,17 +122,8 @@ Error is fixed, was due to a src/services/Services.hpp old code
 **** TODO Handle coverity scan 
      see https://scan.coverity.com/download for more (currently at 4%)
 - [ ] rev 253 uploaded to coverity scan 23 Nov     
-**** TODO [feature_GuiScaling] GUI scale handling and Options gamestate
-     CLOCK: [2016-12-07 mer. 07:27]--[2016-12-07 mer. 08:28] =>  1:01
-     CLOCK: [2016-12-07 mer. 04:06]--[2016-12-07 mer. 04:39] =>  0:33
-- [ ] The GUI is huge at high resolution
-  - [ ] Fix this CEGUIerror
-    =No object of type 'Font' named 'DejaVuSans-12' i=
-    Can't find the reason of this error
-    - [ ] Try to find source of error using try/catch
-  - [ ] Maybe try to add a scale factor
-    TaharezLook uses DejaVu-12
-**** TODO GUI scale handling and Options gamestate
+**** TODO Options gamestate
+     CLOCK: [2016-12-28 mer. 07:13]--[2016-12-28 mer. 07:54] =>  0:41
      CLOCK: [2016-12-21 mer. 06:13]--[2016-12-21 mer. 07:12] =>  0:59
      CLOCK: [2016-12-20 mar. 04:22]--[2016-12-20 mar. 05:38] =>  1:16
      CLOCK: [2016-12-18 dim. 09:08]--[2016-12-18 dim. 09:24] =>  0:16
@@ -142,26 +133,6 @@ Error is fixed, was due to a src/services/Services.hpp old code
      CLOCK: [2016-12-14 mer. 01:54]--[2016-12-14 mer. 02:46] =>  0:52
      CLOCK: [2016-12-07 mer. 12:44]--[2016-12-07 mer. 13:52] =>  1:08
      CLOCK: [2016-12-07 mer. 04:06]--[2016-12-07 mer. 04:39] =>  0:33
-- [X] The GUI is huge at high resolution
-  - [X] Fix this CEGUI error: =No object of type 'Font' named 'DejaVuSans-12' i=
-    - [X] First extract DejaVu font and add its location to resources.cfg.in
-    - [X] Finally, maybe we don't have to extract these files
-      Because DejaVu-12-NoScale can be the trick
-      *Can't fix* : really an unknown issue
-    - [X] First isolate the call that throws this exception
-      At least two error in TempMessage() and MainMenu()
-  - [X] The segfault is fixed (comes from TempMessage
-    but we don't have message when switching fullscreen or changing resolution
-    However, the version number is printed correctly
-    Using DejavuSans-12-NoScale fixed segfault
-  - [X] Maybe try to add a scale factor
-    TaharezLook uses DejaVu-12
-    See if font's AutoScaled value isn't set to True
-    Maybe also on the imageset definition
-- [X] It could be fine if this changes could be serialized in the same
-  way Ogre does it. This way, at next startup, the Ogre config dialog
-  would be defaulted to in-game options.
-- [X] Need to merge GuiScaling branch
 - [-] Changing resolution
   We sometimes have a segfault when changing resolution.
   - [-] Add a ResolutionHandler class we can unit test
@@ -173,20 +144,11 @@ Error is fixed, was due to a src/services/Services.hpp old code
       - [X] cmake search for boost.regex 
       - [X] Add Boost.regex component to DEPENDENCIES
       - [X] Implement probeFromString function	
-	#include <boost/regex.hpp>
-	boost::regex e(regx);
-        boost::smatch what;
-	if(boost::regex_match(text, what, e, boost::match_extra))
-	  what.captures(i)[j]
-        else "No match found"
-	see http://www.boost.org/doc/libs/1_62_0/libs/regex/doc/html/boost_regex/captures.html
-	Classes : [[:blank digit
-	"^ blank* (digit*)x(digit*) blank* $
-	4 failing unit tests
     - [ ] Try to get it with RenderWindow(or RenderSystem) width/height and 
       cast it to a string value.
     - [ ] Handle probe error using an exception if we can't probe
       in any ways (if two ways fail)
+      From src/client/Exception.hpp
     - [ ] We must find in wich string form we must save resolution
       to save resolution to ogre.cfg. String have spaces before and
       after the "x" character. Sometimes one space, sometimes two.
@@ -208,6 +170,36 @@ Error is fixed, was due to a src/services/Services.hpp old code
   Because using a \subpage command in mainpage makes it appears as a subpage
 - [X] Create a real Homepage in src/Mainpage.hmm
 - [ ] May document undocumented members (see doxygen.log)
+**** DONE [feature_GuiScaling] GUI scale handling and Options gamestate
+     CLOCK: [2016-12-07 mer. 07:27]--[2016-12-07 mer. 08:28] =>  1:01
+     CLOCK: [2016-12-07 mer. 04:06]--[2016-12-07 mer. 04:39] =>  0:33
+- [X] The GUI is huge at high resolution
+  - [X] Fix this CEGUIerror
+    =No object of type 'Font' named 'DejaVuSans-12' i=
+    Can't find the reason of this error
+    - [X] Try to find source of error using try/catch
+  - [X] Maybe try to add a scale factor
+    TaharezLook uses DejaVu-12
+- [X] The GUI is huge at high resolution
+  - [X] Fix this CEGUI error: =No object of type 'Font' named 'DejaVuSans-12' i=
+    - [X] First extract DejaVu font and add its location to resources.cfg.in
+    - [X] Finally, maybe we don't have to extract these files
+      Because DejaVu-12-NoScale can be the trick
+      *Can't fix* : really an unknown issue
+    - [X] First isolate the call that throws this exception
+      At least two error in TempMessage() and MainMenu()
+  - [X] The segfault is fixed (comes from TempMessage
+    but we don't have message when switching fullscreen or changing resolution
+    However, the version number is printed correctly
+    Using DejavuSans-12-NoScale fixed segfault
+  - [X] Maybe try to add a scale factor
+    TaharezLook uses DejaVu-12
+    See if font's AutoScaled value isn't set to True
+    Maybe also on the imageset definition
+- [X] It could be fine if this changes could be serialized in the same
+  way Ogre does it. This way, at next startup, the Ogre config dialog
+  would be defaulted to in-game options.
+- [X] Need to merge GuiScaling branch
 **** DONE Handle the Options gamestate
      CLOCK: [2016-11-25 ven. 06:25]--[2016-11-25 ven. 09:40] =>  3:15
      CLOCK: [2016-11-25 ven. 06:03]--[2016-11-25 ven. 06:16] =>  0:13
